# meta-muse-spark-api

./: .env.example  .gitignore  README.txt  pyproject.toml  requirements.txt
examples/x-teaser-demo/: README.md  openai_demo.py
muse_spark/: __main__.py  api.py  client.py  config.py  demo_openai_client.py  errors.py  logging_utils.py  openai_compat.py  prompt_compiler.py  provider.py  schemas.py
tests/: test_api_nonstream.py  test_api_stream.py  test_bootstrap_debug.py  test_client.py  test_demo_openai_client.py  test_prompt_compiler.py  test_provider.py  test_stable_backend.py  test_stateful_prompt.py  test_stream_helpers.py  test_stream_text_deltas.py  test_x_teaser_demo_files.py
