[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "muse-spark"
version = "0.1.0"
description = "CLI for Meta AI Muse Spark"
readme = { file = "README.txt", content-type = "text/plain" }
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<1.0",
  "uvicorn>=0.30,<1.0",
  "websockets>=15.0,<16.0",
]

[project.scripts]
muse-spark = "muse_spark.client:main"

[tool.setuptools]
packages = ["muse_spark"]
